
25/04/2017
*statisticaltest.py
Implementing Johansen test, ADF and CADF test

27/04/2017
Implement portfolio management
Problem:
- BEWARE: Not tested with all cases. UNSTABLE. But provide a good framework
regardless for future strategies. 

28/04/2017
update position.py using Decimal

06/05/2017
turn new_hist.py into a module for implementation in BacktestBase.py 
new change: mv new_hist.py price_retrieval.py
Problem:
- Not tested. Need debug. 
04/05/2017
Finished Johansen

Remember to install johansen and stock API

05/05/2017
Cleaned up new_hist.py, vectorized file will import historical data from new_hist.py
Working on CAPM test and vectorized backtesting

06/05/2017
turn new_hist.py into a module for implementation in BacktestBase.py
new change: mv new_hist.py price_retrieval.py
Problem:
- Not tested. Need debug.

08/05/2017
*VectMomentum.py
- Not finished, needs parameterizing and change yahoo data with Oanda data
- Needs to find a way to export to files or plots
- The code is extremely slow, it takes 11 seconds for 5 tcost data points, 38 seconds for 24 data points
To do:
- Plot the results

10/05/2017
*momentum.py
- Redirect to new event directory
- Parameterize momentum

*VectMomentum.py
- Remove comments
- Add plots

11/05/2017
*VectMomentum.py
- Calls Hurst and MDD to test time series performance
- Add Forex symbol list
https://finance.yahoo.com/connection/currency-converter-cache?date=20150307

*statisticaltest.py
- Add MDD indicator

15/05/2017
*VectMomentum.py
- Change from Yahoo finance data to Oanda for intraday data
Current problem: 
- Oanda data identify itself as object, not DataFrame
- Need to reformat time

*statisticaltest.py
- Adds MDD

*hist.py
- Group the code into methods

20/05/2017
*VectMomentum.py
- Change from Yahoo finance data to Oanda for intraday data

*statisticaltest.py
- Adds MMI (Market Meanness Index)

24/05/2017
*statisticaltest.py
- Adds ADX
- Fixing Oanda data

27/05/2017
Added weighted moving average strategy